--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,109 @@
     <string name="app_name">News</string>
 
 
-<!--Weather-->
+    <!--Weather-->
     <string name="pressure">Pressure </string>
     <string name="humidity">Humidity </string>
     <string name="sunrise_time">Sunrise</string>
     <string name="sunset_time">Sunset</string>
     <string name="wind_speed">Wind speed</string>
+    <string name="action_settings">Settings</string>
+    <string name="search">Search</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+    <string name="pref_title_social_recommendations">Enable social recommendations</string>
+    <string name="pref_description_social_recommendations">Recommendations for people to contact
+        based on your message history
+    </string>
+
+    <string name="pref_title_your_city">City</string>
+    <string name="pref_default_city">Minsk</string>
+
+    <string name="pref_title_search_articles">Search articles</string>
+    <string-array name="pref_search_articles">
+        <item>Yesterday</item>
+        <item>In 3 days</item>
+        <item>During the week</item>
+        <item>During the month</item>
+    </string-array>
+    <string-array name="pref_search_articles_list_values">
+        <item>1</item>
+        <item>3</item>
+        <item>7</item>
+        <item>30</item>
+    </string-array>
+
+    <string name="pref_select_title_language">Select language</string>
+    <string-array name="pref_select_language">
+        <item>Russian</item>
+        <item>English</item>
+        <item>German</item>
+        <item>French</item>
+        <item>Spanish </item>
+        <item>Arabic</item>
+    </string-array>
+    <string-array name="pref_select_language_values">
+        <item>ru</item>
+        <item>en</item>
+        <item>de</item>
+        <item>fr</item>
+        <item>es</item>
+        <item>ar</item>
+    </string-array>
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
+
+    <string-array name="list_preference_entries">
+        <item>Entry 1</item>
+        <item>Entry 2</item>
+        <item>Entry 3</item>
+    </string-array>
+
+    <string-array name="list_preference_entry_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="multi_select_list_preference_default_value"/>
+
+    <string name="pref_title_system_sync_settings">System sync settings</string>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="presssure">Pressure...</string>
+    <string name="wind_speed_nhumidity">Wind speed..., \\nhumidity...</string>
+    <string name="city">City...</string>
+    <string name="find_sources_that_display_news_in_a_specific_language">Find sources that display news in a specific language</string>
 </resources>
