Update UI detail_article, fixed bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
         <item>ar</item>
     </string-array>
 
-    <!-- Example settings for Data & Sync -->
+    <!-- Example settings RatesData & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
