--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,37 +1,40 @@
 <resources>
-    <string name="app_name">News</string>
+    <string name="app_name">Новости</string>
 
 
     <!--Weather-->
-    <string name="pressure">Pressure </string>
-    <string name="humidity">Humidity </string>
-    <string name="sunrise_time">Sunrise</string>
-    <string name="sunset_time">Sunset</string>
-    <string name="wind_speed">Wind speed</string>
-    <string name="action_settings">Settings</string>
-    <string name="search">Search</string>
-    <string name="title_activity_settings">Settings</string>
-    <string name="weather_forecast">Weather forecast</string>
-    <string name="openWeatherMap_not_working">OpenWeatherMap.org not working…</string>
+    <string name="pressure">Давление </string>
+    <string name="humidity">Влажность </string>
+    <string name="sunrise_time">Восход</string>
+    <string name="sunset_time">Заход</string>
+    <string name="wind_speed">Скорость ветра</string>
+    <string name="action_settings">Настройки</string>
+    <string name="search">Поиск</string>
+    <string name="title_activity_settings">Настройки</string>
+    <string name="weather_forecast">Прогноз погоды</string>
+    <string name="openWeatherMap_not_working">OpenWeatherMap.org не доступен…</string>
+    <string name="presssure">Давление…</string>
+    <string name="wind_speed_humidity">Скорость ветра…\nВлажность…</string>
+    <string name="city">Город…</string>
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_header_general">Общие</string>
 
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact
         based on your message history
     </string>
 
-    <string name="pref_title_your_city">City</string>
+    <string name="pref_title_your_city">Город</string>
     <string name="pref_default_city">Minsk</string>
 
-    <string name="pref_title_search_articles">Search articles</string>
+    <string name="pref_title_search_articles">Поиск статей</string>
     <string-array name="pref_search_articles">
-        <item>Yesterday</item>
-        <item>In 3 days</item>
-        <item>During the week</item>
-        <item>During the month</item>
+        <item>Сегодня</item>
+        <item>За 3 дня</item>
+        <item>За неделю</item>
+        <item>За месяц</item>
     </string-array>
     <string-array name="pref_search_articles_list_values">
         <item>1</item>
@@ -40,7 +43,7 @@
         <item>30</item>
     </string-array>
 
-    <string name="pref_select_title_language">Select language</string>
+    <string name="pref_select_title_language">Выберите язык</string>
     <string-array name="pref_select_language">
         <item>Russian</item>
         <item>English</item>
@@ -63,12 +66,12 @@
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
+        <item>15 минут</item>
+        <item>30 минут</item>
+        <item>1 час</item>
+        <item>3 часа</item>
+        <item>6 часов</item>
+        <item>Никогда</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
         <item>15</item>
@@ -104,11 +107,8 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="presssure">Pressure…</string>
-    <string name="wind_speed_humidity">Wind speed…\nHumidity…</string>
-    <string name="city">City…</string>
     <string name="find_sources_that_display_news_in_a_specific_language">Find sources that display news in a specific language</string>
-    <string name="weather_forecast_on_4_days">Weather Forecast</string>
-    <string name="today">Today</string>
 
+    <string name="weather_forecast_on_4_days">Прогноз погоды</string>
+    <string name="today">Сегодня</string>
 </resources>
