--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,114 +1,114 @@
 <resources>
-    <string name="app_name">Новости</string>
+    <!--<string name="app_name">Новости</string>-->
 
 
-    <!--Weather-->
-    <string name="pressure">Давление </string>
-    <string name="humidity">Влажность </string>
-    <string name="sunrise_time">Восход</string>
-    <string name="sunset_time">Заход</string>
-    <string name="wind_speed">Скорость ветра</string>
-    <string name="action_settings">Настройки</string>
-    <string name="search">Поиск</string>
-    <string name="title_activity_settings">Настройки</string>
-    <string name="weather_forecast">Прогноз погоды</string>
-    <string name="openWeatherMap_not_working">OpenWeatherMap.org не доступен…</string>
-    <string name="presssure">Давление…</string>
-    <string name="wind_speed_humidity">Скорость ветра…\nВлажность…</string>
-    <string name="city">Город…</string>
-    <!-- Strings related to Settings -->
+    <!--&lt;!&ndash;Weather&ndash;&gt;-->
+    <!--<string name="pressure">Давление </string>-->
+    <!--<string name="humidity">Влажность </string>-->
+    <!--<string name="sunrise_time">Восход</string>-->
+    <!--<string name="sunset_time">Заход</string>-->
+    <!--<string name="wind_speed">Скорость ветра</string>-->
+    <!--<string name="action_settings">Настройки</string>-->
+    <!--<string name="search">Поиск</string>-->
+    <!--<string name="title_activity_settings">Настройки</string>-->
+    <!--<string name="weather_forecast">Прогноз погоды</string>-->
+    <!--<string name="openWeatherMap_not_working">OpenWeatherMap.org не доступен…</string>-->
+    <!--<string name="presssure">Давление…</string>-->
+    <!--<string name="wind_speed_humidity">Скорость ветра…\nВлажность…</string>-->
+    <!--<string name="city">Город…</string>-->
+    <!--&lt;!&ndash; Strings related to Settings &ndash;&gt;-->
 
-    <!-- Example General settings -->
-    <string name="pref_header_general">Общие</string>
+    <!--&lt;!&ndash; Example General settings &ndash;&gt;-->
+    <!--<string name="pref_header_general">Общие</string>-->
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
+    <!--<string name="pref_title_social_recommendations">Enable social recommendations</string>-->
+    <!--<string name="pref_description_social_recommendations">Recommendations for people to contact-->
+        <!--based on your message history-->
+    <!--</string>-->
 
-    <string name="pref_title_your_city">Город</string>
-    <string name="pref_default_city">Minsk</string>
+    <!--<string name="pref_title_your_city">Город</string>-->
+    <!--<string name="pref_default_city">Minsk</string>-->
 
-    <string name="pref_title_search_articles">Поиск статей</string>
-    <string-array name="pref_search_articles">
-        <item>Сегодня</item>
-        <item>За 3 дня</item>
-        <item>За неделю</item>
-        <item>За месяц</item>
-    </string-array>
-    <string-array name="pref_search_articles_list_values">
-        <item>1</item>
-        <item>3</item>
-        <item>7</item>
-        <item>30</item>
-    </string-array>
+    <!--<string name="pref_title_search_articles">Поиск статей</string>-->
+    <!--<string-array name="pref_search_articles">-->
+        <!--<item>Сегодня</item>-->
+        <!--<item>За 3 дня</item>-->
+        <!--<item>За неделю</item>-->
+        <!--<item>За месяц</item>-->
+    <!--</string-array>-->
+    <!--<string-array name="pref_search_articles_list_values">-->
+        <!--<item>1</item>-->
+        <!--<item>3</item>-->
+        <!--<item>7</item>-->
+        <!--<item>30</item>-->
+    <!--</string-array>-->
 
-    <string name="pref_select_title_language">Выберите язык</string>
-    <string-array name="pref_select_language">
-        <item>Russian</item>
-        <item>English</item>
-        <item>German</item>
-        <item>French</item>
-        <item>Spanish </item>
-        <item>Arabic</item>
-    </string-array>
-    <string-array name="pref_select_language_values">
-        <item>ru</item>
-        <item>en</item>
-        <item>de</item>
-        <item>fr</item>
-        <item>es</item>
-        <item>ar</item>
-    </string-array>
+    <!--<string name="pref_select_title_language">Выберите язык</string>-->
+    <!--<string-array name="pref_select_language">-->
+        <!--<item>Russian</item>-->
+        <!--<item>English</item>-->
+        <!--<item>German</item>-->
+        <!--<item>French</item>-->
+        <!--<item>Spanish </item>-->
+        <!--<item>Arabic</item>-->
+    <!--</string-array>-->
+    <!--<string-array name="pref_select_language_values">-->
+        <!--<item>ru</item>-->
+        <!--<item>en</item>-->
+        <!--<item>de</item>-->
+        <!--<item>fr</item>-->
+        <!--<item>es</item>-->
+        <!--<item>ar</item>-->
+    <!--</string-array>-->
 
-    <!-- Example settings RatesData & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
+    <!--&lt;!&ndash; Example settings RatesData & Sync &ndash;&gt;-->
+    <!--<string name="pref_header_data_sync">Data &amp; sync</string>-->
 
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 минут</item>
-        <item>30 минут</item>
-        <item>1 час</item>
-        <item>3 часа</item>
-        <item>6 часов</item>
-        <item>Никогда</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
+    <!--<string name="pref_title_sync_frequency">Sync frequency</string>-->
+    <!--<string-array name="pref_sync_frequency_titles">-->
+        <!--<item>15 минут</item>-->
+        <!--<item>30 минут</item>-->
+        <!--<item>1 час</item>-->
+        <!--<item>3 часа</item>-->
+        <!--<item>6 часов</item>-->
+        <!--<item>Никогда</item>-->
+    <!--</string-array>-->
+    <!--<string-array name="pref_sync_frequency_values">-->
+        <!--<item>15</item>-->
+        <!--<item>30</item>-->
+        <!--<item>60</item>-->
+        <!--<item>180</item>-->
+        <!--<item>360</item>-->
+        <!--<item>-1</item>-->
+    <!--</string-array>-->
 
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
+    <!--<string-array name="list_preference_entries">-->
+        <!--<item>Entry 1</item>-->
+        <!--<item>Entry 2</item>-->
+        <!--<item>Entry 3</item>-->
+    <!--</string-array>-->
 
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
+    <!--<string-array name="list_preference_entry_values">-->
+        <!--<item>1</item>-->
+        <!--<item>2</item>-->
+        <!--<item>3</item>-->
+    <!--</string-array>-->
 
-    <string-array name="multi_select_list_preference_default_value"/>
+    <!--<string-array name="multi_select_list_preference_default_value"/>-->
 
-    <string name="pref_title_system_sync_settings">System sync settings</string>
+    <!--<string name="pref_title_system_sync_settings">System sync settings</string>-->
 
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
+    <!--&lt;!&ndash; Example settings for Notifications &ndash;&gt;-->
+    <!--<string name="pref_header_notifications">Notifications</string>-->
 
-    <string name="pref_title_new_message_notifications">New message notifications</string>
+    <!--<string name="pref_title_new_message_notifications">New message notifications</string>-->
 
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
+    <!--<string name="pref_title_ringtone">Ringtone</string>-->
+    <!--<string name="pref_ringtone_silent">Silent</string>-->
 
-    <string name="pref_title_vibrate">Vibrate</string>
-    <string name="find_sources_that_display_news_in_a_specific_language">Find sources that display news in a specific language</string>
+    <!--<string name="pref_title_vibrate">Vibrate</string>-->
+    <!--<string name="find_sources_that_display_news_in_a_specific_language">Find sources that display news in a specific language</string>-->
 
-    <string name="weather_forecast_on_4_days">Прогноз погоды</string>
-    <string name="today">Сегодня</string>
+    <!--<string name="weather_forecast_on_4_days">Прогноз погоды</string>-->
+    <!--<string name="today">Сегодня</string>-->
 </resources>
