--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,5 +110,6 @@
     <string name="find_sources_that_display_news_in_a_specific_language">Find sources that display news in a specific language</string>
     <string name="weather_forecast_on_4_days">Weather Forecast</string>
     <string name="today">Today</string>
+    <string name="sources">Sources</string>
 
 </resources>
