--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,8 @@
     <string name="general">General</string>
     <string name="entertainment">Entertainment</string>
     <string name="business">business</string>
+    <string name="close">Close</string>
+    <string name="sliding_down">Sliding down</string>
 
 
 </resources>
