--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,120 +1,7 @@
 <resources>
 
-    <!--<string name="app_name">Новости</string>-->
-
-
-    <!--&lt;!&ndash;Weather&ndash;&gt;-->
-    <!--<string name="pressure">Давление </string>-->
-    <!--<string name="humidity">Влажность </string>-->
-    <!--<string name="sunrise_time">Восход</string>-->
-    <!--<string name="sunset_time">Заход</string>-->
-    <!--<string name="wind_speed">Скорость ветра</string>-->
-    <!--<string name="action_settings">Настройки</string>-->
-    <!--<string name="search">Поиск</string>-->
-    <!--<string name="title_activity_settings">Настройки</string>-->
-    <!--<string name="weather_forecast">Прогноз погоды</string>-->
-    <!--<string name="openWeatherMap_not_working">OpenWeatherMap.org не доступен…</string>-->
-    <!--<string name="presssure">Давление…</string>-->
-    <!--<string name="wind_speed_humidity">Скорость ветра…\nВлажность…</string>-->
-    <!--<string name="city">Город…</string>-->
-    <!--&lt;!&ndash; Strings related to Settings &ndash;&gt;-->
-
-    <!--&lt;!&ndash; Example General settings &ndash;&gt;-->
-    <!--<string name="pref_header_general">Общие</string>-->
-
-    <!--<string name="pref_title_social_recommendations">Enable social recommendations</string>-->
-    <!--<string name="pref_description_social_recommendations">Recommendations for people to contact-->
-        <!--based on your message history-->
-    <!--</string>-->
-
-    <!--<string name="pref_title_your_city">Город</string>-->
-    <!--<string name="pref_default_city">Minsk</string>-->
-
-    <!--<string name="pref_title_search_articles">Поиск статей</string>-->
-    <!--<string-array name="pref_search_articles">-->
-        <!--<item>Сегодня</item>-->
-        <!--<item>За 3 дня</item>-->
-        <!--<item>За неделю</item>-->
-        <!--<item>За месяц</item>-->
-    <!--</string-array>-->
-    <!--<string-array name="pref_search_articles_list_values">-->
-        <!--<item>1</item>-->
-        <!--<item>3</item>-->
-        <!--<item>7</item>-->
-        <!--<item>30</item>-->
-    <!--</string-array>-->
-
-    <!--<string name="pref_select_title_language">Выберите язык</string>-->
-    <!--<string-array name="pref_select_language">-->
-        <!--<item>Russian</item>-->
-        <!--<item>English</item>-->
-        <!--<item>German</item>-->
-        <!--<item>French</item>-->
-        <!--<item>Spanish </item>-->
-        <!--<item>Arabic</item>-->
-    <!--</string-array>-->
-    <!--<string-array name="pref_select_language_values">-->
-        <!--<item>ru</item>-->
-        <!--<item>en</item>-->
-        <!--<item>de</item>-->
-        <!--<item>fr</item>-->
-        <!--<item>es</item>-->
-        <!--<item>ar</item>-->
-    <!--</string-array>-->
-
-    <!--&lt;!&ndash; Example settings RatesData & Sync &ndash;&gt;-->
-    <!--<string name="pref_header_data_sync">Data &amp; sync</string>-->
-
-    <!--<string name="pref_title_sync_frequency">Sync frequency</string>-->
-    <!--<string-array name="pref_sync_frequency_titles">-->
-        <!--<item>15 минут</item>-->
-        <!--<item>30 минут</item>-->
-        <!--<item>1 час</item>-->
-        <!--<item>3 часа</item>-->
-        <!--<item>6 часов</item>-->
-        <!--<item>Никогда</item>-->
-    <!--</string-array>-->
-    <!--<string-array name="pref_sync_frequency_values">-->
-        <!--<item>15</item>-->
-        <!--<item>30</item>-->
-        <!--<item>60</item>-->
-        <!--<item>180</item>-->
-        <!--<item>360</item>-->
-        <!--<item>-1</item>-->
-    <!--</string-array>-->
-
-    <!--<string-array name="list_preference_entries">-->
-        <!--<item>Entry 1</item>-->
-        <!--<item>Entry 2</item>-->
-        <!--<item>Entry 3</item>-->
-    <!--</string-array>-->
-
-    <!--<string-array name="list_preference_entry_values">-->
-        <!--<item>1</item>-->
-        <!--<item>2</item>-->
-        <!--<item>3</item>-->
-    <!--</string-array>-->
-
-    <!--<string-array name="multi_select_list_preference_default_value"/>-->
-
-    <!--<string name="pref_title_system_sync_settings">System sync settings</string>-->
-
-    <!--&lt;!&ndash; Example settings for Notifications &ndash;&gt;-->
-    <!--<string name="pref_header_notifications">Notifications</string>-->
-
-    <!--<string name="pref_title_new_message_notifications">New message notifications</string>-->
-
-    <!--<string name="pref_title_ringtone">Ringtone</string>-->
-    <!--<string name="pref_ringtone_silent">Silent</string>-->
-
-    <!--<string name="pref_title_vibrate">Vibrate</string>-->
-    <!--<string name="find_sources_that_display_news_in_a_specific_language">Find sources that display news in a specific language</string>-->
-
-    <!--<string name="weather_forecast_on_4_days">Прогноз погоды</string>-->
-    <!--<string name="today">Сегодня</string>-->
 
     <string name="app_name">Новости</string>
-
 
     <!--Weather-->
     <string name="pressure">Давление </string>
@@ -135,20 +22,15 @@
     <!-- Example General settings -->
     <string name="pref_header_general">Общие</string>
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
-
     <string name="pref_title_your_city">Город</string>
     <string name="pref_default_city">Minsk</string>
 
-    <string name="pref_title_search_articles">Поиск статей</string>
+    <string name="pref_title_search_articles">Поиск статей за</string>
     <string-array name="pref_search_articles">
         <item>Сегодня</item>
-        <item>За 3 дня</item>
-        <item>За неделю</item>
-        <item>За месяц</item>
+        <item>3 дня</item>
+        <item>Неделю</item>
+        <item>Месяц</item>
     </string-array>
     <string-array name="pref_search_articles_list_values">
         <item>1</item>
@@ -159,7 +41,7 @@
 
     <string name="pref_select_title_language">Выберите язык</string>
     <string-array name="pref_select_language">
-        <item>Russian</item>
+        <item>Русский</item>
         <item>English</item>
         <item>German</item>
         <item>French</item>
@@ -174,6 +56,28 @@
         <item>es</item>
         <item>ar</item>
     </string-array>
+
+    <string-array name="pref_select_country">
+        <item>Russian</item>
+        <item>Great Britain</item>
+        <item>USA</item>
+        <item>German</item>
+        <item>French</item>
+        <item>Polska</item>
+        <item>Arabic</item>
+    </string-array>
+    <string-array name="pref_select_country_values">
+        <item>ru</item>
+        <item>gb</item>
+        <item>us</item>
+        <item>de</item>
+        <item>fr</item>
+        <item>pl</item>
+        <item>ar</item>
+    </string-array>
+    <string name="select_country_you_want_to_get_headlines">Заголовки новостей для выбранной вами страны</string>
+    <string name="pref_select_country_news">Выберите страну</string>
+
 
     <!-- Example settings RatesData & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
@@ -196,11 +100,6 @@
         <item>-1</item>
     </string-array>
 
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
 
     <string-array name="list_preference_entry_values">
         <item>1</item>
@@ -208,21 +107,35 @@
         <item>3</item>
     </string-array>
 
-    <string-array name="multi_select_list_preference_default_value"/>
+    <string-array name="days">
+        <item>Пн</item>
+        <item>Вт</item>
+        <item>Ср</item>
+        <item>Чтв</item>
+        <item>Птн</item>
+        <item>Суб</item>
+        <item>Вскр</item>
+    </string-array>
 
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
-    <string name="find_sources_that_display_news_in_a_specific_language">Find sources that display news in a specific language</string>
-
+    <string name="find_sources_that_display_news_in_a_specific_language">Поиск источников, отображающих новости на определенном языке</string>
     <string name="weather_forecast_on_4_days">Прогноз погоды</string>
     <string name="today">Сегодня</string>
+
+    <string name="sources">Источники</string>
+    <string name="technology">Технологии</string>
+    <string name="sports">Спорт</string>
+    <string name="science">Наука</string>
+    <string name="health">Здоровье</string>
+    <string name="general">Общие</string>
+    <string name="entertainment">Развлечение</string>
+    <string name="business">Бизнес</string>
+    <string name="close">Закрыть</string>
+    <string name="sliding_down">Sliding down</string>
+    <string name="check_connection">Проверьте соеденение с интернетом</string>
+    <string name="title_not_found">Заголовок не найден</string>
+    <string name="update">Обновить</string>
+    <string name="permission_granted">Разрешение получено</string>
+    <string name="permission_denied">Доступ запрещен</string>
+
+
 </resources>
